--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>rockpaperscissors</title>
 </head>
 <body>
+    <div class="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
